2000-12-13  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/easymenu.el (easy-menu-define): Setup indentation.
	(easy-menu-current-active-maps): New function.
	(easy-menu-get-map): Use it.
	Make a proper menu entry when creating a new keymap.

2000-12-13  Kenichi Handa  <handa@etl.go.jp>

	* international/characters.el: Fix cases and syntaxes for
	mule-unicode-0100-24ff.

	* dired.el (dired-move-to-filename-regexp): Fixed for the case
	that a Japanese character is not appended after day and year.

	* info.el (Info-suffix-list): Change format for a command that
	requires arguments.
	(info-insert-file-contents): Adjusted for the above change.

2000-12-12  Andreas Schwab  <schwab@suse.de>

	* tar-mode.el (tar-extract): Base the name of the subfile buffer
	on the name of the tar buffer.  Verify that the existing buffer is
	visiting the same subfile.

2000-12-12  Dave Love  <fx@gnu.org>

	* subdirs.el: Add obsolete.

2000-12-12  Gerd Moellmann  <gerd@gnu.org>

	* mail/rmailsum.el (rmail-summary-expunge)
	(rmail-summary-expunge-and-save): Use rmail-expunge-confirmed
	instead of rmail-confirm-expunge.

	* replace.el (perform-replace): Don't use an empty match adjacent
	to a non-empty match when computing the next match before the
	replacement is performed.

2000-12-12  Milan Zamazal  <pdm@freesoft.cz>

	* progmodes/glasses.el: Use `define-minor-mode' for the minor mode
	definition (patch by Stefan Monnier).
	(glasses-mode): Use jit-lock instead of `after-change-functions'
	(patch by Stefan Monnier).

2000-12-12  Miles Bader  <miles@gnu.org>

	* info.el (Info-last-preorder): Don't barf on nodes without a prev.
	(Info-scroll-down): Respect `Info-scroll-prefer-subnodes'.

2000-12-12  Andrew Choi  <akochoi@i-cable.com>

	* term/mac-win.el: Remove load for ls-lisp.

	* loadup.el: Load ls-lisp for system-type macros.

2000-12-12  Miles Bader  <miles@gnu.org>

	* simple.el (delete-horizontal-space): Add BACKWARD-ONLY parameter.
	Respect field end too.